Guard SM-test teardown against DirtyChai's setSecurityManager(null) prohibition
AgentDelegationCeilingTest and LeasedDelegationTest restore the previously
installed SecurityManager in their finally block via setSecurityManager(previous).
Under -Djava.security.manager=allow no SM is installed at startup, so previous is
null; stock JDK permits setSecurityManager(null) (uninstall), but DirtyChai forbids
it ("SecurityManager cannot be set to null"), erroring the teardown on DirtyChai.

Only restore when an SM was actually installed; the test SM's gating flag is already
cleared first, so any leftover SM enforces nothing.

Verified: jgdms-platform suite green on DirtyChai 27 (268 run, 0 failures/errors,
0 skipped -- the SM tests execute natively rather than Assume-skipping).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>